fix: [CVNG-39]: addressing spacing pr comments

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,12 +1,12 @@
 .main {
   width: 100%;
   border-top: 1px solid var(--grey-300);
-  padding: 0 10px;
+  padding: 0 var(--spacing-small);
   .header {
-    padding-top: 10px !important;
+    padding-top: var(--spacing-small) !important;
   }
   .collapse {
-    margin-top: 5px;
-    margin-left: 20px;
+    margin-top: var(--spacing-xsmall);
+    margin-left: var(--spacing-large);
   }
 }
