--- a/src/components/Collapse/CollapseListPanel.css
+++ b/src/components/Collapse/CollapseListPanel.css
@@ -1,10 +1,10 @@
 .main {
   .collapse {
-    margin-top: 5px;
-    margin-left: 20px;
+    margin-top: var(--spacing-xsmall);
+    margin-left: var(--spacing-large);
   }
 
   .footerContent {
-    margin-top: 10px;
+    margin-top: var(--spacing-small);
   }
 }
